--- a/src/Style.css
+++ b/src/Style.css
@@ -26,11 +26,21 @@
   justify-content: space-evenly;
   align-items: center;
 }
-
+a .celsius {
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  cursor: default;
+  text-decoration: none;
+}
 .enter-city {
   height: 45px;
 }
-
+a .fahrenheit {
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  cursor: default;
+  text-decoration: none;
+}
 .forecast-row {
   text-align: center;
   margin-bottom: 18px;
