--- a/src/Style.css
+++ b/src/Style.css
@@ -26,18 +26,18 @@
   justify-content: space-evenly;
   align-items: center;
 }
-a .celsius {
-  color: white;
-  text-shadow: 1px 1px 2px black;
+.celsius {
+  color: black;
+  text-shadow: 1px 1px 2px white;
   cursor: default;
   text-decoration: none;
 }
 .enter-city {
   height: 45px;
 }
-a .fahrenheit {
-  color: white;
-  text-shadow: 1px 1px 2px black;
+.fahrenheit {
+  color: black;
+  text-shadow: 1px 1px 2px white;
   cursor: default;
   text-decoration: none;
 }
